--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "aws-ec2-metadata": "^2.0.0"
+    "aws-ec2-instance-metadata": "^2.0.0"
   }
 }
