--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Application to display EC2 instance information",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "node app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "aws-ec2-instance-metadata": "^2.0.0"
+    "ec2-metadata": "^3.0.1"
   }
 }
